--- a/demo/demo.html
+++ b/demo/demo.html
@@ -402,15 +402,15 @@
                                             </code>
                                             </pre>
 
-                                    <h2 id="javascript">Javascript</h2>
+                                    <h2 id="javascript">JavaScript</h2>
 
-                                    <p>To show the snackbar, follow this javascript code.
+                                    <p>To show the snackbar, follow this JavaScript code.
                                     </p>
                                     <pre class="codepen-button-enabled"
                                          style="white-space: pre-wrap; background-color: rgba(0,0,0,.06);">
                                             <code class="language-js">
                                             <xmp>
-var snackbarContainer = document.querySelector('#bigsnackbar-example');
+var snackbarContainer = document.querySelector('#bigsnackbar-id');
 
 var data = {
     message: 'Message',
